Single origin.
